--- a/ch05/src/app/products/product-list/product-list.component.html
+++ b/ch05/src/app/products/product-list/product-list.component.html
@@ -1,15 +1,14 @@
 <h2>Product List</h2>
 <ul>
-  <li (click)="selectedProduct = 'Webcam'">Webcam</li>
-  <li (click)="selectedProduct = 'Microphone'">Microphone</li>
-  <li (click)="selectedProduct = 'Wireless Keyboard'">Wireless Keyboard</li>
+  <li *ngFor="let product of products" (click)="selectedProduct =
+  product" (click)="selectedProduct =
+  product">
+    {{product.name | uppercase}}
+  </li>
 </ul>
 
-<app-product-detail
- *ngIf="selectedProduct; else noProduct"
- [name]="selectedProduct"
- (bought)="onBuy(selectedProduct)">
+<app-product-detail *ngIf="selectedProduct; else noProduct" [product]="selectedProduct" (bought)="onBuy(selectedProduct.name)">
 </app-product-detail>
 <ng-template #noProduct>
- <p>No product selected!</p>
+  <p>No product selected!</p>
 </ng-template>
