feat: ch05 part final

--- a/ch05/src/app/products/product-detail/product-detail.component.html
+++ b/ch05/src/app/products/product-detail/product-detail.component.html
@@ -2,7 +2,7 @@
   <h2>Product Details</h2>
   <h3>{{product.name}}</h3>
   <div [ngSwitch]="product.name">
-    <p>{{product | json}}</p>
+    <p >{{product.name}}</p>
     <p *ngSwitchCase="'Microphone'">
     Product is used for audio
 
