--- a/ch08/src/app/products/product-detail/product-detail.component.html
+++ b/ch08/src/app/products/product-detail/product-detail.component.html
@@ -2,6 +2,10 @@
   <h2>Product Details</h2>
   <h3>{{product.name}}</h3>
   <span>{{product.price | currency:'EUR'}}</span>
+  <input placeholder="New price" #price />
+  <button (click)="changePrice(product, price.
+valueAsNumber)">Change</button>
+  <button class="delete" (click)="remove(product)">Delete</button>
   <p>
     <button (click)="buy()">Buy Now</button>
   </p>
