--- a/ch09/src/app/app.component.html
+++ b/ch09/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-auth></app-auth>
-<app-product-list></app-product-list>
+<a routerLink="/products">Products</a>
+<a routerLink="/cart">Cart</a>
+<router-outlet></router-outlet>
