--- a/ch09/src/app/products/product-detail/product-detail.component.html
+++ b/ch09/src/app/products/product-detail/product-detail.component.html
@@ -2,12 +2,10 @@
   <h2>Product Details</h2>
   <h3>{{product.name}}</h3>
   <span>{{product.price | currency:'EUR'}}</span>
-  <input placeholder="New price" #price />
-  <button (click)="changePrice(product, price.
-valueAsNumber)">Change</button>
+  <input placeholder="New price" #price/>
+  <button (click)="changePrice(product, price.valueAsNumber)">Change</button>
   <p>
     <button *ngIf="authService.isLoggedIn" (click)="buy()">Buy Now</button>
+    <button class="delete" (click)="remove(product)">Delete</button>
   </p>
-
-  <button class="delete" (click)="remove(product)">Delete</button>
 </div>
