--- a/ch09/src/app/products/product-list/product-list.component.html
+++ b/ch09/src/app/products/product-list/product-list.component.html
@@ -1,13 +1,12 @@
 <h2>Product List</h2>
 <ul>
-  <li *ngFor="let product of products | sort" (click)="selectedProduct = product">
-    {{product.name}}
+  <li *ngFor="let product of products | sort">
+    <a [routerLink]="['./', product.id]">{{product.name}}</a>
   </li>
 </ul>
-<app-product-detail
-  *ngIf="selectedProduct; else noProduct"
-  [id]="selectedProduct.id"
-  (deleted)="onDelete()"
+<app-product-create (added)="onAdd($event)"></app-product-create>
+
+<app-product-detail *ngIf="selectedProduct; else noProduct" [id]="selectedProduct.id" (deleted)="onDelete()"
   (bought)="onBuy()">
 </app-product-detail>
 <ng-template #noProduct>
