--- a/ch11/src/app/products/product-create/product-create.component.html
+++ b/ch11/src/app/products/product-create/product-create.component.html
@@ -1,22 +1,25 @@
 <form [formGroup]="productForm" (ngSubmit)="createProduct()">
   <div>
-    <label for="name">Name</label>
-    <input id="name" formControlName="name" required />
-    <span *ngIf="name.touched && name.invalid">
-      The name is not valid
-    </span>
+    <mat-form-field>
+      <input formControlName="name" placeholder="Name" [matAutocomplete]="productsAuto" required matInput />
+      <mat-error>The name is not valid</mat-error>
+    </mat-form-field>
+    <mat-autocomplete #productsAuto="matAutocomplete">
+      <mat-option *ngFor="let product of products$ | async" [value]="product.name">
+        {{product.name}}
+      </mat-option>
+    </mat-autocomplete>
   </div>
   <div>
-    <label for="price">Price</label>
-    <input id="price" formControlName="price" required />
-    <span *ngIf="price.touched && price.hasError('required')">
-      The price is required
-    </span>
-    <span *ngIf="price.touched && price.hasError('outOfRange')">
-      The price is out of range
-    </span>
+    <mat-form-field>
+      <input formControlName="price" placeholder="Price" required matInput />
+      <mat-error>The price is required</mat-error>
+      <mat-hint>
+        Price should be between 1 and 10000
+      </mat-hint>
+    </mat-form-field>
   </div>
   <div>
-    <button type="submit" [disabled]="!productForm.valid">Create</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!productForm.valid">Create</button>
   </div>
 </form>
