feat: ch11 part3

--- a/ch11/src/app/auth/auth/auth.component.html
+++ b/ch11/src/app/auth/auth/auth.component.html
@@ -1,8 +1,2 @@
-<button
-  [hidden]="authService.isLoggedIn"
-  (click)="authService.login().subscribe()"
->Login</button>
-<button
-  [hidden]="!authService.isLoggedIn"
-  (click)="authService.logout()"
->Logout</button>
+<button mat-raised-button [hidden]="authService.isLoggedIn" (click)="authService.login().subscribe()">Login</button>
+<button mat-raised-button [hidden]="!authService.isLoggedIn" (click)="authService.logout()">Logout</button>
