--- a/ch11/src/app/products/product-create/product-create.component.html
+++ b/ch11/src/app/products/product-create/product-create.component.html
@@ -19,6 +19,24 @@
       </mat-hint>
     </mat-form-field>
   </div>
+
+  <div>
+    <mat-form-field>
+      <mat-label>Categories</mat-label>
+      <mat-select multiple>
+        <mat-option *ngFor="let category of categories" [value]="category">
+          {{category}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field>
+      <input matInput type="text" placeholder="Production date" [matDatepicker]="picker" />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </div>
   <div>
     <button mat-raised-button color="primary" type="submit" [disabled]="!productForm.valid">Create</button>
   </div>
