--- a/ch11/src/app/products/product-detail/product-detail.component.html
+++ b/ch11/src/app/products/product-detail/product-detail.component.html
@@ -2,16 +2,9 @@
   <h2>Product Details</h2>
   <h3>{{product.name}}</h3>
   <span>{{product.price | currency:'EUR'}}</span>
-  <form (ngSubmit)="changePrice(product, product.price)">
-    <input placeholder="New price" name="price" #price [(ngModel)]="product.
-price" />
-
-    <button type="submit">Change</button>
-
-    <button *ngIf="authService.isLoggedIn" (click)="buy(product)">Buy Now</button>
-
-  </form>
+  <button mat-raised-button color="primary" (click)="changePrice(product)">Change</button>
   <p>
-    <button class="delete" (click)="remove(product)">Delete</button>
+    <button mat-button *ngIf="authService.isLoggedIn" (click)="buy(product)">Buy Now</button>
+    <button mat-raised-button color="primary" class="delete" (click)="remove(product)">Delete</button>
   </p>
 </div>
